<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Password.PasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/default_bar_height"
        android:paddingBottom="@dimen/default_bar_height">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/password_bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextCurrent"
            style="@style/EditText"
            android:layout_marginTop="80dp"
            android:hint="@string/current"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/editTextNew"
            style="@style/EditText"
            android:layout_marginTop="15dp"
            android:hint="@string/new_pass"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextCurrent"
            app:layout_constraintStart_toStartOf="@+id/editTextCurrent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCurrent"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/editTextPasswordAgain"
            style="@style/EditText"
            android:layout_marginTop="15dp"
            android:hint="@string/again_pass"
            app:layout_constraintEnd_toEndOf="@+id/editTextNew"
            app:layout_constraintStart_toStartOf="@+id/editTextNew"
            app:layout_constraintTop_toBottomOf="@+id/editTextNew"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height_register"
            android:layout_marginTop="100dp"
            style="@style/BlueButton"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordAgain"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:gravity="center_horizontal"
            android:hint="Bottom line color change"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>